--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,10 @@
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.0",
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.9",
-    "@types/react-dom": "^19.1.6",
+    "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
