--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "json2csv": "^6.0.0-alpha.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@babel/core": "^7.28.0",
     "@eslint/js": "^9.30.1",
+    "@types/json2csv": "^5.0.7",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.6.0",
