--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@tinymce/tinymce-react": "^6.3.0",
+    "aos": "^2.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@babel/core": "^7.28.0",
     "@eslint/js": "^9.30.1",
+    "@types/aos": "^3.0.7",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
