--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@tiptap/react": "^3.3.0",
     "@tiptap/starter-kit": "^3.3.0",
     "aos": "^2.3.4",
+    "framer-motion": "^12.27.5",
     "jwt-decode": "^4.0.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
